# string-metric

./: README.md  pyproject.toml  scripts.py
src/string_metric/: comparison.py  similarity.py
src/tests/: error.py
src/tests/distance/: test_hamming.py  test_levenshtein.py
src/tests/hz/: test_frequencies.py
src/tests/similarity/: test_szymkiewicz_simpson.py
string_metric/: distance.py  hz.py  similarity.py
tests/: error.py
tests/comparison/: test_longest_common_subsequence.py  test_longest_common_substring.py
tests/distance/: test_damerau_levenshtein.py
tests/hz/: test_frequencies.py
tests/similarity/: test_jaccard.py  test_sorensen_dice.py
